@@ -51,6 +51,7 @@ TZ=GMT
 www.fake.come	FALSE	/	FALSE	1022144953	cookiecliente	si
 www.loser.com	FALSE	/	FALSE	1139150993	UID	99
 %HOSTIP	FALSE	/	FALSE	1439150993	mooo	indeed
+#HttpOnly_%HOSTIP	FALSE	/	FALSE	1439150993	mooo2	indeed2
 %HOSTIP	FALSE	/	FALSE	0	empty	
 </file>
 </client>
@@ -64,7 +65,7 @@ www.loser.com	FALSE	/	FALSE	1139150993	UID	99
 GET /want/46 HTTP/1.1
 Host: %HOSTIP:%HTTPPORT
 Accept: */*
-Cookie: empty=; mooo=indeed
+Cookie: empty=; mooo2=indeed2; mooo=indeed
 
 </protocol>
 <file name="log/jar46" mode="text">
@@ -75,6 +76,7 @@ Cookie: empty=; mooo=indeed
 www.fake.come	FALSE	/	FALSE	1022144953	cookiecliente	si
 www.loser.com	FALSE	/	FALSE	1139150993	UID	99
 %HOSTIP	FALSE	/	FALSE	1439150993	mooo	indeed
+#HttpOnly_%HOSTIP	FALSE	/	FALSE	1439150993	mooo2	indeed2
 %HOSTIP	FALSE	/	FALSE	0	empty	
 %HOSTIP	FALSE	/	FALSE	2054030187	ckyPersistent	permanent
 %HOSTIP	FALSE	/	FALSE	0	ckySession	temporary
